# E2022_42sh

./: .gitignore  CMakeLists.txt  README.md  TODO
doc/: 42sh.1  Doxyfile
doc/html/: 42sh_8h_source.html  annotated.html  ast_8h_source.html  classes.html  dir_000003_000009.html  dir_000009_000011.html  dir_000012_000009.html  dir_0515af0c15a203f52bd3c55ec9514988.html  dir_1d81446536dd6236e702f72d2fb2cc9b.html  dir_203e5988f1ed315d29383d699972de6f.html  dir_20c594f309093585052f59b0a5914c52.html  dir_3e0dc525175f20807738b8deedc7a4b7.html  dir_3e0dc525175f20807738b8deedc7a4b7_dep.map  dir_3e0dc525175f20807738b8deedc7a4b7_dep.md5  dir_51d37d93a99f151d07755b62737feb84.html  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_5eb159725f84c66aafd839904a4acdd0_dep.map  dir_5eb159725f84c66aafd839904a4acdd0_dep.md5  dir_624ac48ae7941fac88a1f20593f9f0c3.html  dir_639758a9510ac7014d338835d89a3e54.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_6cd8491d143eb218b70983dbdb3c58bc.html  dir_6cd8491d143eb218b70983dbdb3c58bc_dep.map  dir_81d54459e2e3b7881076e1c51cccf4b2.html  dir_862cb4b05c869a8ee00621968b9b9efb.html  dir_910afc7bfb2bf8f448c14dfeb05a7b33.html  dir_ac4cb8eedc3b1780be80b55509ac4887.html  dir_bd0755c95a42e835fb06f38bbeb1d6ed.html  dir_ceaea701a7544f16372af2bc59e26d41.html  dir_e1aa690b4af0a0538ec65649b0390051.html  dir_e1aa690b4af0a0538ec65649b0390051_dep.map  execute_8h_source.html  execution_8h_source.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  (+75 more)
doc/latex/: annotated.tex  dir_0515af0c15a203f52bd3c55ec9514988.tex  dir_1d81446536dd6236e702f72d2fb2cc9b.tex  dir_203e5988f1ed315d29383d699972de6f.tex  dir_20c594f309093585052f59b0a5914c52.tex  dir_3e0dc525175f20807738b8deedc7a4b7.tex  dir_51d37d93a99f151d07755b62737feb84.tex  dir_5eb159725f84c66aafd839904a4acdd0.tex  dir_624ac48ae7941fac88a1f20593f9f0c3.tex  dir_639758a9510ac7014d338835d89a3e54.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6cd8491d143eb218b70983dbdb3c58bc.tex  dir_6cd8491d143eb218b70983dbdb3c58bc_dep.md5  dir_81d54459e2e3b7881076e1c51cccf4b2.tex  dir_862cb4b05c869a8ee00621968b9b9efb.tex  dir_910afc7bfb2bf8f448c14dfeb05a7b33.tex  dir_ac4cb8eedc3b1780be80b55509ac4887.tex  dir_bd0755c95a42e835fb06f38bbeb1d6ed.tex  dir_ceaea701a7544f16372af2bc59e26d41.tex  dir_e1aa690b4af0a0538ec65649b0390051.tex  dir_e1aa690b4af0a0538ec65649b0390051_dep.md5  files.tex  lexer_8h.tex  lexer_8h__dep__incl.md5  lexer_8h__incl.md5  md__home_arthur_Bureau_42sh_E2022_42sh_README.tex  refman.tex  structanalysis__table.tex  structanalysis__table__coll__graph.md5  structast.tex  structast__coll__graph.md5  structcommand.tex  structcommand__coll__graph.md5  structexecution__bundle.tex  (+34 more)
src/: CMakeLists.txt
src/arithmetic/: CMakeLists.txt  arithmetic.h
src/arithmetic/src/: CMakeLists.txt
src/arithmetic/src/ast/: CMakeLists.txt  ast.c  ast.h
src/arithmetic/src/eval/: CMakeLists.txt  arithmetic_substitution.c  ast_print.c
src/arithmetic/src/lexer/: CMakeLists.txt  lexer.c  lexer.h  token.c  token.h  token_list.h
src/arithmetic/src/parser/: CMakeLists.txt  parser.c  parser.h
src/arithmetic/src/utils/: CMakeLists.txt
src/ast/: CMakeLists.txt  Makefile  ast.c  ast.h  ast_execute.c  ast_execute_builders.c  ast_print.c  ast_utils.c  sample
src/ast/builders/: arglist.c  commands.c  redirections.c
src/ast/handlers/: and_or.c  case.c  for.c  func_declaration.c  funcdec.c  if_then.c  list.c  pipe.c  until.c  vardec.c  while.c
src/ast/tests/: ast.test.c  ast_execution.test.c  ast_print.test.c
src/builtins/: CMakeLists.txt  alias.c  break_continue.c  break_continue_exit.c  builtins.c  builtins.h  cd.c  echo.c  export.c  history.c  shopt.c  source.c
src/builtins/tests/: test_shopt.c
src/execution/: CMakeLists.txt  Makefile  apply_redirections.c  command.c  execution.h  output  pipe.c  redirection.c  run_tests.sh  subshell.c
src/execution/tests/: cmd  output  redirect_basic.test  redirect_basic.test.c
src/execution/tests/basic/: input  test_basic.c
src/execution/tests/builtins/: test_execution_builtins.c
src/execution/tests/subshell/: test_subshell.c
src/expansion/: CMakeLists.txt  expansion.c  expansion.h  tilde.c
src/hashtable/: CMakeLists.txt  a.out  hashtable.c  hashtable.h  hashtablefunc.c  hashtablefunc.h  hashtablevar.c  hashtablevar.h
src/lexer/: CMakeLists.txt  handlers.c  lexer.c  lexer.h  lexer2.c  post_lexer.c  run_tests.sh  token.c  token.h  token_array.c  token_string.c  token_to_handler.c  utils.c
src/lexer/tests/: 42sh  test_advanced.c  test_basic.c  test_suite.py
src/lexer/tmp/: err
src/lexer/token/: token.c  token.h  token_string.c
src/main/: 42sh.h  CMakeLists.txt  advanced_prompt.c  execute.c  execute.h  history.c  main.c  readline.c  readline.h  ressources.c
src/options/: CMakeLists.txt  options.c  options.h  run_tests.sh  test_options.c
src/options/tests/: test_options.c
src/parser/: CMakeLists.txt  Makefile  build_grammar.c  grammar.c  operations.c  parse.c  parser.h  recipe.c  rule.c  rule_array.c  run_tests.sh  stack.c  stamp.c  symbol.c  symbol_array.c  table.c  test.c  test_runner.c  tmp_parse.c  utils.c
src/parser/ast_build/: node_operator.c  node_string.c
src/parser/old/: recipe.c  test.c
src/parser/old/shell_rules/: rule_command.c  rule_element.c  rule_list.c
src/parser/shell_rules/: and_or.c  case.c  command.c  compound_list.c  compound_list_break.c  do.c  element.c  for.c  funcdec.c  if.c  input.c  list.c  misc.c  pipeline.c  redirection.c  rule_and_or.c  rule_command.c  rule_element.c  rule_input.c  rule_list.c  rule_pipeline.c  rule_redirection.c
src/parser/tests/: test_basic.test.c  test_grammar_basic.c  test_parser_basic.c  test_parser_more.c
src/variables/: CMakeLists.txt  run_tests.sh  variables.c  variables.h
src/variables/tests/: test_variables_basic.c
tests/: Makefile  refout.txt  shout.txt  test_suite.py  test_suite.sh  test_suite_for_ubuntu.py  test_suite_tuto.txt  tests.yml  variable_special.sh
(+73 files in other folders)
