include_directories(${CMAKE_CURRENT_SOURCE_DIR}/ast)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/execution)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lexer)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/parser)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/options)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/main)

add_subdirectory(ast/)
add_subdirectory(execution/)
add_subdirectory(lexer/)
add_subdirectory(parser/)
add_subdirectory(options/)
add_subdirectory(main/)
